src/qml/jsruntime/qv4engine.cpp
@@ -1478,11 +1478,13 @@ QQmlError ExecutionEngine::catchExceptionAsQmlError()
 // Variant conversion code
 
 typedef QSet<QV4::Heap::Object *> V4ObjectSet;
+enum class JSToQVariantConversionBehavior {Never, Safish, Aggressive };
 static QVariant toVariant(
-    const QV4::Value &value, QMetaType typeHint, bool createJSValueForObjectsAndSymbols,
+    const QV4::Value &value, QMetaType typeHint, JSToQVariantConversionBehavior conversionBehavior,
     V4ObjectSet *visitedObjects);
 static QObject *qtObjectFromJS(const QV4::Value &value);
-static QVariant objectToVariant(const QV4::Object *o, V4ObjectSet *visitedObjects = nullptr);
+static QVariant objectToVariant(const QV4::Object *o, V4ObjectSet *visitedObjects = nullptr,
+                                JSToQVariantConversionBehavior behavior = JSToQVariantConversionBehavior::Safish);
 static bool convertToNativeQObject(const QV4::Value &value, QMetaType targetType, void **result);
 static QV4::ReturnedValue variantListToJS(QV4::ExecutionEngine *v4, const QVariantList &lst);
 static QV4::ReturnedValue sequentialIterableToJS(QV4::ExecutionEngine *v4, const QSequentialIterable &lst);
@@ -1492,8 +1494,7 @@ static QV4::ReturnedValue variantToJS(QV4::ExecutionEngine *v4, const QVariant &
     return v4->metaTypeToJS(value.metaType(), value.constData());
 }
 
-static QVariant toVariant(
-        const QV4::Value &value, QMetaType metaType, bool createJSValueForObjectsAndSymbols,
+static QVariant toVariant(const QV4::Value &value, QMetaType metaType, JSToQVariantConversionBehavior conversionBehavior,
         V4ObjectSet *visitedObjects)
 {
     Q_ASSERT (!value.isEmpty());
@@ -1590,7 +1591,7 @@ static QVariant toVariant(
                         }
                     }
 
-                    asVariant = toVariant(arrayValue, valueMetaType, false, visitedObjects);
+                    asVariant = toVariant(arrayValue, valueMetaType, JSToQVariantConversionBehavior::Never, visitedObjects);
                     if (valueMetaType == QMetaType::fromType<QVariant>()) {
                         retnAsIterable.metaContainer().addValue(retn.data(), &asVariant);
                     } else {
@@ -1655,7 +1656,7 @@ static QVariant toVariant(
     if (const ArrayBuffer *d = value.as<ArrayBuffer>())
         return d->asByteArray();
     if (const Symbol *symbol = value.as<Symbol>()) {
-        return createJSValueForObjectsAndSymbols
+        return conversionBehavior == JSToQVariantConversionBehavior::Never
             ? QVariant::fromValue(QJSValuePrivate::fromReturnedValue(symbol->asReturnedValue()))
             : symbol->descriptiveString();
     }
@@ -1676,20 +1677,27 @@ static QVariant toVariant(
             return result;
     }
 
-    if (createJSValueForObjectsAndSymbols)
+    if (conversionBehavior == JSToQVariantConversionBehavior::Never)
         return QVariant::fromValue(QJSValuePrivate::fromReturnedValue(o->asReturnedValue()));
 
-    return objectToVariant(o, visitedObjects);
+    return objectToVariant(o, visitedObjects, conversionBehavior);
 }
 
+QVariant ExecutionEngine::toVariantLossy(const Value &value)
+{
+    return ::toVariant(value, QMetaType(), JSToQVariantConversionBehavior::Aggressive, nullptr);
+}
 
 QVariant ExecutionEngine::toVariant(
     const Value &value, QMetaType typeHint, bool createJSValueForObjectsAndSymbols)
 {
-    return ::toVariant(value, typeHint, createJSValueForObjectsAndSymbols, nullptr);
+    auto behavior = createJSValueForObjectsAndSymbols ? JSToQVariantConversionBehavior::Never
+                                                      : JSToQVariantConversionBehavior::Safish;
+    return ::toVariant(value, typeHint, behavior, nullptr);
 }
 
-static QVariantMap objectToVariantMap(const QV4::Object *o, V4ObjectSet *visitedObjects)
+static QVariantMap objectToVariantMap(const QV4::Object *o, V4ObjectSet *visitedObjects,
+                                      JSToQVariantConversionBehavior conversionBehvior)
 {
     QVariantMap map;
     QV4::Scope scope(o->engine());
@@ -1704,12 +1712,13 @@ static QVariantMap objectToVariantMap(const QV4::Object *o, V4ObjectSet *visited
         QString key = name->toQStringNoThrow();
         map.insert(key, ::toVariant(
                                 val, /*type hint*/ QMetaType {},
-                                /*createJSValueForObjectsAndSymbols*/false, visitedObjects));
+                                conversionBehvior, visitedObjects));
     }
     return map;
 }
 
-static QVariant objectToVariant(const QV4::Object *o, V4ObjectSet *visitedObjects)
+static QVariant objectToVariant(const QV4::Object *o, V4ObjectSet *visitedObjects,
+                                JSToQVariantConversionBehavior conversionBehvior)
 {
     Q_ASSERT(o);
 
@@ -1737,13 +1746,20 @@ static QVariant objectToVariant(const QV4::Object *o, V4ObjectSet *visitedObject
         int length = a->getLength();
         for (int ii = 0; ii < length; ++ii) {
             v = a->get(ii);
-            list << ::toVariant(v, QMetaType {}, /*createJSValueForObjectsAndSymbols*/false,
+            list << ::toVariant(v, QMetaType {}, conversionBehvior,
                                 visitedObjects);
         }
 
         result = list;
-    } else if (o->getPrototypeOf() == o->engine()->objectPrototype()->d()) {
-        result = objectToVariantMap(o, visitedObjects);
+    } else if (o->getPrototypeOf() == o->engine()->objectPrototype()->d()
+               || (conversionBehvior == JSToQVariantConversionBehavior::Aggressive &&
+                   !o->as<QV4::FunctionObject>())) {
+        /* FunctionObject is excluded for historical reasons, even though
+           objects with a custom prototype risk losing information
+           But the Aggressive path is used only in QJSValue::toVariant
+           which is documented to be lossy
+        */
+        result = objectToVariantMap(o, visitedObjects, conversionBehvior);
     } else {
         // If it's not a plain object, we can only save it as QJSValue.
         result = QVariant::fromValue(QJSValuePrivate::fromReturnedValue(o->asReturnedValue()));
@@ -1973,7 +1989,7 @@ QVariantMap ExecutionEngine::variantMapFromJS(const Object *o)
     Q_ASSERT(o);
     V4ObjectSet visitedObjects;
     visitedObjects.insert(o->d());
-    return objectToVariantMap(o, &visitedObjects);
+    return objectToVariantMap(o, &visitedObjects, JSToQVariantConversionBehavior::Safish);
 }
 
 
